# automata-workflows

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.infrastructure.yml  docker-compose.workers.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: coding_agent_workflow.md  elixir_integration.md  llm_inference_workflow.md  repository_indexing_workflow.md
examples/: architecture_request_input.json  coding_agent_example.py  llm_inference_example.py  llm_test_input.json  prd_request_input.json  repository_indexing_example.py  workflow_query_example.py
k8s/: README.md
k8s/docs/: kubernetes-deployment.md
k8s/scripts/: deploy.sh  destroy.sh  port-forward.sh
k8s/temporal/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/temporal/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
k8s/workers/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/workers/templates/: _helpers.tpl  serviceaccount.yaml  worker-deployment.yaml  worker-service.yaml
scripts/: api_server.py  migrate_db.py  query_coding_agent_workflows.py  query_workflows.py  run_workers.py  run_workflow.py
shared/: __init__.py  config.py
shared/activities/: __init__.py  ai.py  analysis.py  coding_agent.py  github.py  llm.py  repository.py
shared/models/: __init__.py  coding_agent.py  github.py  llm.py
shared/services/: __init__.py  workflow_query.py
tests/: test_coding_agent_validation.py
workers/: coding_agent_worker.py  llm_inference_worker.py  repository_indexing_worker.py
workflows/coding_automation/: __init__.py  code_review_workflow.py  coding_agent_workflow.py  repository_indexing_workflow.py
workflows/llm_inference/: __init__.py  llm_inference_workflow.py
